--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
 </head>
 <body>
    
-   
+   <div class="form-container">
+      <form action="" method="post" id="form1">
+         <div id="input-group">
+            <label for="roll-diameter">Diameter of the entier roll</label>
+            <input type="number" name="roll-diameter" id="roll-diameter">
+         </div>
+         <div id="input-group">
+            <label for="tube-diameter">Diameter of the tube</label>
+            <input type="number" name="tube-diameter" id="tube-diameter">
+         </div>
+         <div id="input-group">
+            <label for="carpet-thickness">Thickness of the carpet</label>
+            <input type="number" name="carpet-thickness" id="carpet-thickness">
+         </div>
+         <div class="buttons-container">
+            <button type="submit" value="Calculate" id="submit-btn">Get Square Yards</button>
+            <button type="reset" value="Reset" id="reset-btn">Reset</button>
+         </div>
+         
+      </form>
+   </div>
 
 
 </body>
