--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <input type="number" name="tube-diameter" id="tube-diameter" value="" placeholder="0" min="1" step="any">
          </div>
          <div class="input-group">
+            <label for="carpet-rings">Carpet rings</label>
+            <input type="number" name="rings" id="carpet-rings" value="" placeholder="0" min="1" step="any">
+         </div>
+         <div class="input-group">
             <label for="carpet-thickness">Thickness of the carpet</label>
             <input type="number" name="carpet-thickness" id="carpet-thickness" value="" placeholder="0.00" min="0" step="any">
          </div>
