--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          </div>
          <div class="buttons-container">
             <button type="submit" value="Calculate" id="submit-btn" prevent default>Get Square Yards</button>
-            <button type="reset" value="Reset" id="reset-btn">Reset</button>
+            <button type="reset" value="Reset" id="reset-btn">HD Cal Sqyds</button>
          </div>
          
       </form>
