Commented out the function that uses thickness as a value. Does not come out correctly. Updated buttons and event listeners.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          </div>
          <div class="buttons-container">
             <button type="submit" value="Calculate" id="submit-btn" prevent default>Get Square Yards</button>
-            <button type="reset" value="" id="reset-btn">HD Calc Sqyds</button>
+            <button type="reset" value="Reset" id="reset-btn">Clear</button>
          </div>
          
       </form>
