Added drop down for roll width

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
    
    <div class="form-container">
       <form action="" method="post" id="form1">
+         <div class=""input-group>
+            <label for="roll-width">Select carpet roll width</label>
+            <select name="roll-width" id="roll-width">
+               <option value="0.0872">6' wide</option>
+               <option value="0.1454">10' wide</option>
+               <option value="0.1744">12' wide</option>
+               <option value="0.2182">15' wide</option>
+            </select>
+         </div>
          <div class="input-group">
             <label for="roll-diameter">Diameter of the entier roll</label>
             <input type="number" name="roll-diameter" id="roll-diameter" value="" placeholder="0" min="0" step="any">
