--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
          <div class=""input-group>
             <label for="roll-width">Select carpet roll width</label>
             <select name="roll-width" id="roll-width">
-               <option value="0.0872">6' wide</option>
-               <option value="0.1454">10' wide</option>
-               <option value="0.1744">12' wide</option>
-               <option value="0.2182">15' wide</option>
+               <option value="0.0872">6</option>
+               <option value="0.1454">10</option>
+               <option value="0.1744">12</option>
+               <option value="0.2182">15</option>
             </select>
          </div>
          <div class="input-group">
