Updated README file. added styling for select input

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
    <div class="form-container">
       <form action="" method="post" id="form1">
-         <div class=""input-group>
+         <div class="input-group">
             <label for="roll-width">Select carpet roll width</label>
             <select name="roll-width" id="roll-width">
                <option value="0.0872">6</option>
