--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
    
    <div class="form-container">
       <div class="tab-wrapper">
-         <button class="tab-links calc-selection-btn" id="cal-rollSize-form" onclick="openForm(event, 'form1')">Calc Roll Size</button>
+         <button class="tab-links calc-selection-btn active" id="cal-rollSize-form" onclick="openForm(event, 'form1')">Calc Roll Size</button>
          <button class="tab-links calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2')">Calc Carpet Price</button>
       </div>
       <hr>
 
       <!-- FIRST FORM START - CALC ROLLS SQYD -->      
-      <form action="" method="post" id="form1">
+      <form action="" method="post" id="form1" class="tab-content">
          <div class="form-heading">
             <h1>Calculate Roll Good Size</h1>
          </div>
@@ -50,18 +50,18 @@
       </form>
 
       <!-- SECOND FORM START - CALC CUT SIZE SQYDS AND PRICE -->
-      <form action="" method="post" id="form2">
+      <form action="" method="post" id="form2" class="tab-content">
          <div class="form-heading">
             <h1>Calculate Cut Price</h1>
          </div>
-         <div class="input-group">
+         <div class="input-group2">
             <label for="roll-width">Select roll width</label>
-            <select name="roll-width" id="roll-width">
+            <select name="roll-width" id="roll-width2">
                <option value="6">6ft Wide</option>
                <option value="12" selected>12ft Wide</option>
             </select>
          </div>
-         <div class="input-group">
+         <div class="input-group2">
             <label for="cut-size" class="cut-size-input">Cut 1</label>
             <div class="input-wrapper">
                <input type="number" name="cut-size-ft" value="" placeholder="0" min="1" step="1">
@@ -70,11 +70,12 @@
             </div> 
          </div>
 
-         <div class="input-group">
+         <div class="input-group2">
             <label for="sell-price">Enter price of roll good</label>
             <div class="input-wrapper">
                <span class="currency-symbol">$</span>
-               <input type="number" name="roll-good-price" id="sell-price-input" placeholder="$0.00" value="0.00">
+               <input type="number" name="roll-good-price" id="sell-price-input" placeholder="" value="0.00">
+               <span class="price-unit-measurement">Per SqYd</span>
             </div> 
          </div>
 
