Started tab function

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
    
    <div class="form-container">
       <div class="tab-wrapper">
-         <button class="tab-links calc-selection-btn active" id="cal-rollSize-form" onclick="openForm(event, 'form1')">Calc Roll Size</button>
-         <button class="tab-links calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2')">Calc Carpet Price</button>
+         <button class="tablinks calc-selection-btn active" id="cal-rollSize-form" onclick="openForm(event, 'form1')">Calc Roll Size</button>
+         <button class="tablinks calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2')">Calc Carpet Price</button>
       </div>
       <hr>
 
       <!-- FIRST FORM START - CALC ROLLS SQYD -->      
-      <form action="" method="post" id="form1" class="tab-content">
+      <form action="" method="post" id="form1" class="tabcontent">
          <div class="form-heading">
             <h1>Calculate Roll Good Size</h1>
          </div>
@@ -50,7 +50,7 @@
       </form>
 
       <!-- SECOND FORM START - CALC CUT SIZE SQYDS AND PRICE -->
-      <form action="" method="post" id="form2" class="tab-content">
+      <form action="" method="post" id="form2" class="tabcontent">
          <div class="form-heading">
             <h1>Calculate Cut Price</h1>
          </div>
