Removed active class from 1st tab that was used for testing.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
    <div class="form-container">
       <div class="tab-wrapper">
-         <button class="tablinks calc-selection-btn active" id="cal-rollSize-form" onclick="openForm(event, 'form1')">Calc Roll Size</button>
+         <button class="tablinks calc-selection-btn" id="cal-rollSize-form" onclick="openForm(event, 'form1')">Calc Roll Size</button>
          <button class="tablinks calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2')">Calc Carpet Price</button>
       </div>
       <!--<hr>-->
