Worked on styling for form1. Added few elements to form2.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
          <div class="input-group2">
             <label for="cut-size" class="cut-size-input">Cut 1</label>
             <div class="input-wrapper">
+               <span class="measurement-unit">ft</span>
                <input type="number" name="cut-size-ft" value="" placeholder="0" min="1" step="1">
+               <span class="measurement-unit">in</span>
                <input type="number" name="cut-size-in" value="" placeholder="0" min="0" step="any">  
                <button type="button" class="delete-input" >X</button>
             </div> 
@@ -74,7 +76,7 @@
             <label for="sell-price">Enter price of roll good</label>
             <div class="input-wrapper">
                <span class="currency-symbol">$</span>
-               <input type="number" name="roll-good-price" id="sell-price-input" placeholder="" value="0.00">
+               <input type="number" name="roll-good-price" id="sell-price-input" placeholder="" value="">
                <span class="price-unit-measurement">Per SqYd</span>
             </div> 
          </div>
