Minor update to form2 input attributes. Continued work on getCutPrice function.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <h1>Calculate Cut Price</h1>
          </div>
          <div class="input-group2">
-            <label for="roll-width">Select roll width</label>
-            <select name="roll-width" id="roll-width2">
+            <label for="roll-width2">Select roll width</label>
+            <select name="roll-width2" id="roll-width2">
                <option value="6">6ft Wide</option>
                <option value="12" selected>12ft Wide</option>
             </select>
@@ -68,7 +68,7 @@
                <input type="number" name="cut-size-ft" id="cut-size-ft" value="" placeholder="0"  min="1" step="1">
                <span class="measurement-unit">ft</span>
                
-               <input type="number" name="cut-size-in" id="cut-size-in" value="" placeholder=".00" min="0" step="any">
+               <input type="number" name="cut-size-in" id="cut-size-in" value="" placeholder="0" min="0" max="11" step="1">
                <span class="measurement-unit">in</span>  
                <button type="button" class="delete-input" >X</button>
             </div> 
