Get Price Function:
- Variables added to pull input values.
- Calculations added to get square yards for 12ft wide goods.
- Added temp screen caps of the calculators.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </select>
          </div>
          <div class="input-group2">
-            <label for="cut-size" class="cut-size-input">Cut 1</label>
+            <label for="cut-size" class="cut-size-input">Cut <span class="cut-num">1</span> </label>
             <div class="input-wrapper">
                
                <input type="number" name="cut-size-ft" id="cut-size-ft" value="" placeholder="0"  min="1" step="1">
