What I have for deletcut function so far

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </select>
          </div>
          <div class="input-group2">
-            <label for="cut-size" class="cut-size-input">Cut <span class="cut-num">1</span> </label>
+            <label for="cut-size" class="cut-size-input-label">Cut <span class="cut-num">1</span> </label>
             <div class="input-wrapper">
                
                <input type="number" name="cut-size-ft" id="cut-size-ft" value="" placeholder="0"  min="1" step="1">
@@ -70,7 +70,7 @@
                
                <input type="number" name="cut-size-in" id="cut-size-in" value="" placeholder="0" min="0" max="11" step="1">
                <span class="measurement-unit">in</span>  
-               <button type="button" class="delete-input" >X</button>
+               <button type="button" class="delete-input">X</button>
             </div> 
          </div>
 
