Add cut button added. Add cut function updated to add new cut line. Label part is missing though.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                <option value="12" selected>12ft Wide</option>
             </select>
          </div>
+         
          <div class="input-group2">
             <label for="cut-size" class="cut-size-input-label">Cut <span class="cut-num">1</span> </label>
             <div class="input-wrapper">
@@ -72,6 +73,10 @@
                <span class="measurement-unit">in</span>  
                <button type="button" class="delete-input">X</button>
             </div> 
+         </div>
+
+         <div class="add-btn-container">
+            <button id="add-cut-btn" class="add-cut-btn" onclick="addCut()">Add Cut</button>
          </div>
 
          <div class="input-group2">
