Hide 1st remove cut button

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                
                <input type="number" name="cut-size-in" id="cut-size-in" value="" placeholder="0" min="0" max="11" step="1">
                <span class="measurement-unit" id="measurement-unit-in">in</span>  
-               <button class="delete-input" onclick="return this.parentNode.parentNode.remove();" >Remove Cut</button>
+               <button class="delete-input hidden-remove-btn" onclick="return this.parentNode.parentNode.remove();" >Remove Cut</button>
             </div> 
          </div>
 
