Calc roll size: Based on roll width size selected output shows either total linear feet for 6ft wide or sqyds if 12ft wide.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <input type="number" name="rings" id="carpet-rings" value="" placeholder="0" min="1" step="any">
          </div>
          <div class="buttons-container">
-            <button type="submit" value="Calculate-sqyd" id="submit-btn" class="submit-btn" >Get Square Yards</button>
+            <button type="submit" value="Calculate-sqyd" id="submit-btn" class="submit-btn" >Get Roll Size</button>
             <button type="reset" value="Reset-sqyd-form" id="reset-btn" class="clear-btn">Clear</button>
          </div>  
 
