Added fav icons and footer.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
    <!-- Style Sheet -->
    <link rel="stylesheet" href="styles.css">
    <title>Carpet Roll Square Yard Calculator</title>
@@ -106,6 +107,10 @@
          
          <div id="output-cut-price"></div>
       </form>
+
+      <footer>
+         <p>Site designed and coded by: Rudolph Mims || Store#0739</p>
+      </footer>
       
 
    </div>
