Added output for total linear feet of all cuts to results. Added more space between output lines. Updated input and select focus styling

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
          </div>
 
          <div class="add-btn-container">
-            <button type="button" id="add-cut-btn" class="add-cut-btn" onclick="addCut()">Add Cut</button>
+            <button type="button" id="add-cut-btn" class="add-cut-btn" onclick="addCut()">Add Another Cut</button>
          </div>
 
          <div class="input-group2">
