--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
    <link rel="stylesheet" href="styles.css">
    <title>Carpet Roll Square Yard Calculator</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HHW9QMSLRG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HHW9QMSLRG');
+</script>
+
+
 <body>
    
    <div class="form-container">
