Updated form names in the onclick tab buttons

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
    
    <div class="form-container">
       <div class="tab-wrapper">
-         <button class="tablinks calc-selection-btn" id="cal-rollSize-form" onclick="openForm(event, 'form1')">Calc Roll Quantity</button>
-         <button class="tablinks calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2')">Calc Carpet Price</button>
+         <button class="tablinks calc-selection-btn" id="cal-rollSize-form" onclick="openForm(event, 'form1-Roll-Size-Calc')">Calc Roll Quantity</button>
+         <button class="tablinks calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2-Cut-Calc')">Calc Carpet Price</button>
       </div>
       <!--<hr>-->
 
