--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
       <!-- FIRST FORM START - CALC ROLLS SQYD 
       #############################################################-->      
-      <form action="" method="post" id="form1-Roll-Size-Calc" class="tabcontent">
+      <form action="" method="get" id="form1-Roll-Size-Calc" class="tabcontent" >
          <div class="form-heading">
             <h1>Calculate Roll Good Quantity</h1>
          </div>
          <div class="input-group">
-            <label for="roll-width">Rolled goods width</label>
+            <label for="roll-width">Select roll width size</label>
             <select name="roll-width" id="roll-width" required>
                <option value="" disabled selected hidden>Select width size</option>
                <option value="0.0872" class="selection-placeholder">6</option>
@@ -47,17 +47,17 @@
          </div>
          <div class="input-group">
             <label for="roll-diameter">Diameter of the entier roll</label>
-            <input type="number" name="roll-diameter" id="roll-diameter" value="" placeholder="0" min="0" step="any">
+            <input type="number" name="roll-diameter" id="roll-diameter" value="" placeholder="0" min="0" step="any" required />
             <span class="input-unit-inch">in.</span>
          </div>
          <div class="input-group">
             <label for="tube-diameter">Diameter of the tube</label>
-            <input type="number" name="tube-diameter" id="tube-diameter" value="" placeholder="0" min="1" step="any">
+            <input type="number" name="tube-diameter" id="tube-diameter" value="" placeholder="0" min="1" step="any" required />
             <span class="input-unit-inch">in.</span>
          </div>
          <div class="input-group">
-            <label for="carpet-rings">Carpet rings</label>
-            <input type="number" name="rings" id="carpet-rings" value="" placeholder="0" min="1" step="any">
+            <label for="carpet-rings">How many carpet rings</label>
+            <input type="number" name="rings" id="carpet-rings" value="" placeholder="0" min="1" step="any" required />
          </div>
          <div class="buttons-container">
             <button type="submit" value="Calculate-sqyd" id="submit-btn" class="submit-btn" >Calculate</button>
@@ -74,11 +74,11 @@
             <h1>Calculate Cut Price</h1>
          </div>
          <div class="input-group2">
-            <label for="roll-width2">Select roll width</label>
-            <select name="roll-width2" id="roll-width2">
-               <option value="" disabled selected hidden>Select Width</option>
+            <label for="roll-width2">Select roll width size</label>
+            <select name="roll-width2" id="roll-width2" required>
+               <option value="" disabled selected hidden>Select width size</option>
                <option value="6">6ft Wide</option>
-               <option value="12" selected>12ft Wide</option>
+               <option value="12">12ft Wide</option>
             </select>
          </div>
          
@@ -87,10 +87,10 @@
             <div id="cuts">
                <div class="cut-input-wrapper">
                   <label for="cut1Length">Length of cut 1:</label>
-                  <input type="number" class="cutLengthFt" name="cut-size-ft" min="0" step="1" value="" placeholder="0">
+                  <input type="number" class="cutLengthFt" name="cut-size-ft" min="0" step="1" value="" placeholder="0" required>
                   <span class="measurement-unit measurement-unit-ft">ft</span>
                   <!-- Inch Input -->
-                  <input type="number" id="cut1LengthInch" class="cutLengthInch" name="cut-size-in" min="0" max="11" step="1" value="" placeholder="0">
+                  <input type="number" id="cut1LengthInch" class="cutLengthInch" name="cut-size-in" min="0" max="11" step="1" value="" placeholder="0" required>
                   <span class="measurement-unit measurement-unit-in">in</span>
                   <!-- <button type="button" class="delete-input hidden-remove-btn" onclick="return this.parentNode.remove();" >Remove Cut</button> -->
                   <button type="button" class="delete-input hidden-remove-btn" >Remove Cut</button>
@@ -106,7 +106,7 @@
             <label for="sell-price">Enter price of roll good</label>
             <div class="input-wrapper input-price-wrapper">
                <span class="currency-symbol">$</span>
-               <input type="number" name="roll-good-price" id="sell-price-input" placeholder="" value="">
+               <input type="number" name="roll-good-price" id="sell-price-input" placeholder="0.00" value="" required>
                <span class="price-unit-measurement">Per SqYd</span>
             </div> 
          </div>
