Added font awesome v5.15.4 to the project locally

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
    <!-- Style Sheet -->
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="assets/css/styles.css">
+   <!--load all Font Awesome styles -->
+   <link href="/assets/css/all.css" rel="stylesheet">
    <title>Carpet Roll Square Yard Calculator</title>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -65,6 +67,7 @@
          </div>  
 
          <div id="output-roll-size"></div>
+      
       </form>
 
       <!-- SECOND FORM START - CALC CUT SIZE SQYDS AND PRICE 
@@ -121,6 +124,7 @@
 
       <footer>
          <p>Site designed and coded by: Rudolph Mims || Store#0739</p>
+         <p><i class="fa-solid fa-circle-info"></i></p>
       </footer>
       
 
@@ -130,5 +134,7 @@
 
 
 </body>
-<script src="app.js"></script>
+<script src="assets/js/app.js"></script>
+<!-- For Font Awesome 5.15.4 -->
+<script src="assets/js/all.js"></script>
 </html>
