Added header to form container to hold help icons

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 <body>
    
    <div class="form-container">
+      <header>
+         <i class="far fa-question-circle"></i>
+      </header>
       <div class="tab-wrapper">
          <button class="tablinks calc-selection-btn" id="cal-rollSize-form" onclick="openForm(event, 'form1-Roll-Size-Calc')">Calc Roll Quantity</button>
          <button class="tablinks calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2-Cut-Calc')">Calc Carpet Price</button>
