--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    
    <div class="form-container">
       <header>
-         <i class="far fa-question-circle"></i>
+         <i class="far fa-question-circle icons"></i>
       </header>
       <div class="tab-wrapper">
          <button class="tablinks calc-selection-btn" id="cal-rollSize-form" onclick="openForm(event, 'form1-Roll-Size-Calc')">Calc Roll Quantity</button>
