Typo with the text after the total price of a 6ft cut. Fix background image for page not found.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <!-- Style Sheet -->
    <link rel="stylesheet" href="assets/css/styles.css">
    <!--load all Font Awesome styles -->
-   <link href="/assets/css/all.css" rel="stylesheet">
+   <link rel="stylesheet" href="/assets/css/all.css" >
    <title>Carpet Roll Square Yard Calculator</title>
 </head>
 <!-- Google tag (gtag.js) -->
