--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
    <!-- Style Sheet -->
-   <link rel="stylesheet" href="assets/css/styles.css">
+   <link rel="stylesheet" href="/assets/css/styles.css">
    <!--load all Font Awesome styles -->
    <link rel="stylesheet" href="/assets/css/all.css" >
    <title>Carpet Roll Square Yard Calculator</title>
