Header link edits

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
    <!-- End Google Tag Manager -->
    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
    <!-- Style Sheet -->
-   <link rel="stylesheet" href="/assets/css/styles.css">
+   <link rel="stylesheet" href="assets/css/styles.css">
    <!--load all Font Awesome styles -->
-   <link rel="stylesheet" href="/assets/css/all.css" >
+   <link rel="stylesheet" href="assets/css/all.css" >
    <title>Carpet Roll Square Yard Calculator</title>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -146,7 +146,7 @@
 
 
 </body>
-<script src="/assets/js/app.js"></script>
+<script src="assets/js/app.js"></script>
 <!-- For Font Awesome 5.15.4 -->
-<script src="/assets/js/all.js"></script>
+<script src="assets/js/all.js"></script>
 </html>
