Changed remove cut button to a trash icon

--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@
                   <input type="number" id="cut1LengthInch" class="cutLengthInch" name="cut-size-in" min="0" max="11" step="1" value="" placeholder="0" required>
                   <span class="measurement-unit measurement-unit-in">in</span>
                   <!-- <button type="button" class="delete-input hidden-remove-btn" onclick="return this.parentNode.remove();" >Remove Cut</button> -->
-                  <button type="button" class="delete-input hidden-remove-btn" >Remove Cut</button>
+                  <!-- <button type="button" class="delete-input hidden-remove-btn" >Remove Cut</button> -->
+                  <button type="button" class="delete-input-btn" ><i class="far fa-trash-alt trash-icon"></i></button>
                 </div>
             </div>
          </div>
+         
 
          <div class="add-btn-container">
             <button type="button" id="add-cut-btn" class="add-cut-btn" onclick="addCut()">Add Another Cut</button>
