inputValidation function added. Needs to be debugged js:115

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          </div>
          <div class="input-group">
             <label for="roll-width">Select roll width size</label>
-            <select name="roll-width" id="roll-width" required>
+            <select name="roll-width" id="roll-width" required="required">
                <option value="" disabled selected hidden>Select width size</option>
                <option value="0.0872" class="selection-placeholder">6</option>
                <option value="0.1454">10</option>
